apps/archived/prod/headless/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless-depl
  namespace: harrytang-prod
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: headless-depl
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headless-depl
      version: v1
  template:
    metadata:
      labels:
        app: headless-depl
        version: v1
    spec:
      containers:
        - name: headless
          ports:
            - containerPort: 1337
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          image: ghcr.io/harrytang/headless:v1.2.8 # {"$imagepolicy": "harrytang-prod:headless"}
          imagePullPolicy: Always
